# iam-protocol-core

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
docs/: compute-budget.md
programs/entros-anchor/src/: lib.rs
programs/entros-registry/src/: errors.rs  lib.rs
programs/iam-anchor/: Cargo.toml
programs/iam-anchor/src/: errors.rs  lib.rs  state.rs
programs/iam-registry/: Cargo.toml
programs/iam-registry/src/: lib.rs
programs/iam-verifier/: Cargo.toml
programs/iam-verifier/src/: lib.rs
scripts/: devnet-airdrop.sh  devnet-fund.sh
tests/: iam-anchor.ts  iam-registry.ts  iam-verifier.ts  utils.ts  z-e2e.ts
tests-litesvm-ts/: clock-tests.ts  encodeDecode.ts  entros-registry.ts  litesvm-utils.ts  test-coverage.ts  token2022-expansion.ts  trustscore.ts  wallet-migration.ts
