[package]
name = "iam-registry"
version = "0.1.0"
edition = "2021"
description = "Protocol registry, trust scoring, and validator management for IAM Protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "iam_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-program-log = "1.1.0"
